# phishtrack_service

./: .gitignore  README.md  TODO  docker-compose.yml  dockerfile  manage.py  pyproject.toml  settings.toml
config/: config.py
crawler/: main_crawler.py
crawler/crawl_engine/: crawl.py
crawler/database/: database.py
crawler/http/: request.py
phish_track/: TODO  a.txt  docker-compose.yml  dockerfile  pyproject.toml
phish_track/api/: api.py
phish_track/database/: database.py
phish_track/models/: models.py
phish_track/phish_track/: api.py  database.py  docker-compose.yml  dockerfile  models.py  schemas.py  services.py
phish_track/schemas/: schemas.py
phish_track/services/: services.py
phish_track_crawler/: TODO  docker-compose.yml  dockerfile  pyproject.toml
phish_track_crawler/crawler/crawler/: crawl.py  main.py  request.py
tests/: test_request.py
